# painter

./: .gitmodules  CMakeLists.txt  main.cpp
include/glad/: glad.h
src/: glad.c  main.cpp
src/brush/: brush.cpp  brush.h  linebrush.cpp  linebrush.h  pencilbrush.cpp  pencilbrush.h
src/canvas/: canvas.cpp  canvas.h
src/shapes/: lineshape.cpp  lineshape.h
src/utils/: utils.cpp  utils.h
